# django-safemigrate

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  HISTORY.rst  LICENSE  README.rst  azure-pipelines.yml  pyproject.toml  pytest.ini  tox.ini
.github/: dependabot.yml
.github/workflows/: build.yml  test.yml
src/django_safemigrate/: __init__.py  apps.py  check.py  models.py
src/django_safemigrate/management/commands/: safemigrate.py
src/django_safemigrate/migrations/: 0001_initial.py
tests/: models_test.py  safemigrate_test.py
tests/testproject/: settings.py
