[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "django-safemigrate"
version = "3.1"
description = "Safely run migrations before deployment"
authors = ["Ryan Hiebert <ryan@aspiredu.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.6"
django = ">=3.0,<5.0"

[tool.poetry.dev-dependencies]
tox = "*"
black = "*"

[tool.coverage.run]
branch = true
parallel = true
source = ["django_safemigrate"]

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.coverage.report]
show_missing = true
