[build-system]
build-backend = "poetry.masonry.api"
requires = [
  "poetry>=0.12",
]

[tool.isort]
combine_as_imports = true
profile = "black"

[tool.coverage.run]
branch = true
parallel = true
source = ["django_safemigrate"]

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.coverage.report]
show_missing = true

[tool.poetry]
name = "django-safemigrate"
version = "4.0"
description = "Safely run migrations before deployment"
authors = ["Ryan Hiebert <ryan@aspiredu.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.8"
django = ">=3.2,<5.0"

[tool.poetry.dev-dependencies]
tox = "*"
